Fixed  bg image not showing in build version

--- a/src/index.css
+++ b/src/index.css
@@ -19,10 +19,5 @@ main {
   flex-grow: 1;
   display: flex;
   background-size: 100% 100%;
-  background-image: url("bg.png");
-}
-
-/* .MuiSvgIcon-root */
-.css-kk1bwy-MuiButtonBase-root-MuiMenuItem-root .MuiListItemIcon-root {
-  color: #fff;
+  background-image: url("/bg.png");
 }
